--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "^18.11.3"
+  },
+  "dependencies": {
+    "bcrypt": "^5.1.0",
+    "moment": "^2.29.4"
   }
 }
